Fixes image and title alignment

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,24 +4,20 @@ body {
 }
 
 img.profile {
-	height: 100px;
-	width: 100px;
-	margin: 20px 20px 20px 0px;
-	border: 5px solid #2980b9;
+	height: 120px;
+	width: 120px;
+	margin: 20px 10px 0px 10px;
+	border: 3px solid #2980b9;
 	border-radius: 100px;
 	-webkit-box-shadow: 10px 10px 50px 0px rgba(0,0,0,0.39);
 	-moz-box-shadow: 10px 10px 50px 0px rgba(0,0,0,0.39);
 	box-shadow: 10px 10px 50px 0px rgba(0,0,0,0.39);
-	float: left;
 }
 
 header {
 	width: 100%;
-	margin-left: 50px;
-	text-align: center;
 	margin-bottom: 0px;
 	font-family: 'Montserrat', sans-serif;
-	text-align: left;
 }
 
 h1.title {
@@ -39,7 +35,6 @@ nav {
 }
 
 p {
-	margin-left: 20px;
 	font-family: 'Open Sans', sans-serif;
 	color: #ecf0f1;
 }
@@ -47,6 +42,11 @@ p {
 .cntr {
 	width: 100%;
 	text-align: center;
+}
+
+.mrg-auto {
+	width: 560px;
+	margin: 0px auto;
 }
 
 .container {
